--- a/login.html
+++ b/login.html
@@ -1,11 +1,10 @@
-
 <h1>
-	Login
+  Login
 </h1>
 
-<form method="post" action="http://localhost:3000/login">
-	Username: <input type="text" name="username"><br/>
-	Password: <input type="password" name="password"><br/>
+<form method="post" action="/login">
+  Username: <input type="text" name="username" /><br />
+  Password: <input type="password" name="password" /><br />
 
-	<button>Login</button>
+  <button>Login</button>
 </form>
